idf_component_register(SRCS "app.c"
                            "nvs_param.c"
                            "pwm_ctrl.c"
                            "input_sig.c"
                            "config_portal.c"
                            "temp_monitor.c"
                            "key.c"
                    INCLUDE_DIRS ".")
